--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_API_URL=hhttps://fsd119-abhishekkj35.onrender.com
+VITE_API_URL=https://fsd119-abhishekkj35.onrender.com/api
 VITE_APP_NAME=HealthVillage
 VITE_DEFAULT_TIMEOUT=10000
